--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.4.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
